--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,40 @@
 cmake_minimum_required(VERSION 3.2)
 
-project(cpp01_2 VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
+# Определение PATCH_VERSION для локальной сборки и сборки на travis
+if($ENV{TRAVIS_BUILD_NUMBER})
+  set(PATCH_VERSION $ENV{TRAVIS_BUILD_NUMBER})
+else()
+  set(PATCH_VERSION 0)
+endif()
+
+project(helloworld VERSION 1.0.PATCH_VERSION)
 
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
 configure_file(version.h.in version.h)
 
-add_executable(cpp01_2_cli main.cpp)
+# Создание целей
+add_executable(helloworld_app main.cpp)
 
-add_library(cpp01_2 lib.cpp)
+add_library(helloworld_lib STATIC lib.cpp)
 
-add_executable(test_main_cli test_main.cpp)
+add_executable(helloworld_test_main test_main.cpp)
 
-set_target_properties(cpp01_2_cli test_main_cli PROPERTIES
-  CXX_STANDARD 14
-  CXX_STANDARD_REQUIRED ON
-  COMPILE_OPTIONS -Wpedantic -Wall -Wextra
-)
+# Настройка целей
+add_compile_options(-Wpedantic -Wall -Wextra)     # для всех целей
 
-set_target_properties(test_main_cli PROPERTIES
-  COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
-  INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
-)
+target_compile_features(helloworld_app cxx_std_14)
+target_link_libraries(helloworld_app helloworld_lib)
 
-target_link_libraries(cpp01_2_cli cpp01_2)
-
-target_link_libraries(test_main_cli
+target_include_directories(helloworld_test_main ${Boost_INCLUDE_DIR})
+target_compile_features(helloworld_test_main cxx_std_14)
+target_compile_definitions(helloworld_test_main BOOST_TEST_DYN_LINK)
+target_link_libraries(helloworld_test_main 
   ${Boost_LIBRARIES}
-  cpp01_2
+  helloworld_lib
 )
 
-install(TARGETS cpp01_2_cli RUNTIME DESTINATION bin)
+install(TARGETS helloworld_app RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
@@ -38,10 +42,10 @@ set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 
-set(CPACK_PACKAGE_CONTACT vvz.otus@gmail.com)
+set(CPACK_PACKAGE_CONTACT camelot58@gmail.com)
 
 include (CPack)
 
 enable_testing()
 
-add_test(test_version_valid test_main_cli)
+add_test(test_version_valid helloworld_test_main)
