--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: cpp
-before_script:
+before_install:
   - sudo apt-get install libboost-test-dev -y
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update -qq
+  - sudo apt-get install gcc-7 g++-7 -y
+  - sudo update-alternatives --display gcc
+install:
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7
+  - sudo update-alternatives --auto gcc
 script:
   - cmake .
   - cmake --build .
